# full-stack-exo

./: .env  README.md  Taskfile.yml  pyproject.toml
src/full_stack_exo/: main.py
